MAD9013 Final - Bootstrap Sports Site

--- a/index.html
+++ b/index.html
@@ -116,100 +116,92 @@
                         <!-- Wrapper for slides -->
                     <div class="carousel-inner">
                         <div class="item active">
-<!--
                             <picture>
                                 <source
                                     media="(max-width: 320px)"
-                                    srcset="img/slide-1_256.jpg">
+                                    srcset="img/home-256.jpg">
                                 <source
                                     media="(max-width: 479px)"
-                                    srcset="img/slide-1_512.jpg">
+                                    srcset="img/home-512.jpg">
                                 <source
                                     media="(max-width: 991px)"
-                                    srcset="img/slide-1_768.jpg">
+                                    srcset="img/home-768.jpg">
                                 <source
                                     media="(max-width: 1199px)"
-                                    srcset="img/slide-1_1024.jpg">
+                                    srcset="img/home-1024.jpg">
                                 <source
                                     media="(min-width: 1200px)"
-                                    srcset="img/slide-1_1280.jpg">
--->
+                                    srcset="img/home-1280.jpg">
                                 <img class="img-responsive"
                                     src="img/home-1280.jpg"
                                     alt="home focal image">
-<!--                            </picture>-->
+                            </picture>
                         </div>
                         <div class="item">
-<!--
                             <picture>
                                 <source
                                     media="(max-width: 320px)"
-                                    srcset="img/slide-2_256.jpg">
+                                    srcset="img/standings-256.jpg">
                                 <source
                                     media="(max-width: 479px)"
-                                    srcset="img/slide-2_512.jpg">
+                                    srcset="img/standings-512.jpg">
                                 <source
                                     media="(max-width: 991px)"
-                                    srcset="img/slide-2_768.jpg">
+                                    srcset="img/standings-768.jpg">
                                 <source
                                     media="(max-width: 1199px)"
-                                    srcset="img/slide-2_1024.jpg">
+                                    srcset="img/standings-1024.jpg">
                                 <source
                                     media="(min-width: 1200px)"
-                                    srcset="img/slide-2_1280.jpg">
--->
+                                    srcset="img/standings-1280.jpg">
                                 <img class="img-responsive"
                                     src="img/standings-1280.jpg"
                                     alt="standings focal image">
-<!--                            </picture>-->
+                            </picture>
                         </div>
                         <div class="item">
-<!--
                             <picture>
                                 <source
                                     media="(max-width: 320px)"
-                                    srcset="img/slide-3_256.jpg">
+                                    srcset="img/locations-256.jpg">
                                 <source
                                     media="(max-width: 479px)"
-                                    srcset="img/slide-3_512.jpg">
+                                    srcset="img/locations-512.jpg">
                                 <source
                                     media="(max-width: 991px)"
-                                    srcset="img/slide-3_768.jpg">
+                                    srcset="img/locations-768.jpg">
                                 <source
                                     media="(max-width: 1199px)"
-                                    srcset="img/slide-3_1024.jpg">
+                                    srcset="img/locations-1024.jpg">
                                 <source
                                     media="(min-width: 1200px)"
-                                    srcset="img/slide-3_1280.jpg">
--->
+                                    srcset="img/locations-1280.jpg">
                                 <img class="img-responsive"
                                     src="img/locations-1280.jpg"
                                     alt="locations focal image">
-<!--                            </picture>-->
+                            </picture>
                         </div>
                         <div class="item">
-<!--
                             <picture>
                                 <source
                                     media="(max-width: 320px)"
-                                    srcset="img/slide-4_256.jpg">
+                                    srcset="img/signup-256.jpg">
                                 <source
                                     media="(max-width: 479px)"
-                                    srcset="img/slide-4_512.jpg">
+                                    srcset="img/signup-512.jpg">
                                 <source
                                     media="(max-width: 991px)"
-                                    srcset="img/slide-4_768.jpg">
+                                    srcset="img/signup-768.jpg">
                                 <source
                                     media="(max-width: 1199px)"
-                                    srcset="img/slide-4_1024.jpg">
+                                    srcset="img/signup-1024.jpg">
                                 <source
                                     media="(min-width: 1200px)"
-                                    srcset="img/slide-4_1280.jpg">
--->
+                                    srcset="img/signup-1280.jpg">
                                 <img class="img-responsive"
                                     src="img/signup-1280.jpg"
                                     alt="signup focal image">
-<!--                            </picture>-->
+                            </picture>
                         </div>
                     </div>
                     
