MAD9013 Final - Bootstrap Sports Site

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                                     srcset="img/home-1280.jpg">
                                 <img class="img-responsive"
                                     src="img/home-1280.jpg"
-                                    alt="home focal image">
+                                    alt="home carousel image">
                             </picture>
                         </div>
                         <div class="item">
@@ -156,7 +156,7 @@
                                     srcset="img/standings-1280.jpg">
                                 <img class="img-responsive"
                                     src="img/standings-1280.jpg"
-                                    alt="standings focal image">
+                                    alt="standings carousel image">
                             </picture>
                         </div>
                         <div class="item">
@@ -178,7 +178,7 @@
                                     srcset="img/locations-1280.jpg">
                                 <img class="img-responsive"
                                     src="img/locations-1280.jpg"
-                                    alt="locations focal image">
+                                    alt="locations carousel image">
                             </picture>
                         </div>
                         <div class="item">
@@ -200,7 +200,7 @@
                                     srcset="img/signup-1280.jpg">
                                 <img class="img-responsive"
                                     src="img/signup-1280.jpg"
-                                    alt="signup focal image">
+                                    alt="signup carousel image">
                             </picture>
                         </div>
                     </div>
