--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
 
                         <!-- Wrapper for slides -->
                     <div class="carousel-inner">
+                    <!--for image sources see css/scss section Background Images-->
                         <div class="item active">
                             <picture>
                                 <source
