--- a/pages/standings.html
+++ b/pages/standings.html
@@ -41,7 +41,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 
-                <a class="navbar-league text-uppercase" href="index.html">Cableway Racing League</a>
+                <a class="navbar-league text-uppercase" href="../index.html">Cableway Racing League</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -473,6 +473,12 @@
         </div>
     </footer>
 
+    <!-- jQuery -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
+    <!-- Latest Compiled and Minified Bootstrap JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+    
 </body>
 
 </html>
