MAD9013 Final - Bootstrap Sports Site

--- a/pages/locations.html
+++ b/pages/locations.html
@@ -47,16 +47,16 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav text-uppercase">
                     <li>
-                        <a href="../index.html">Home</a>
+                        <a href="../index.html"><strong>Home</strong></a>
                     </li>
                     <li>
-                        <a href="standings.html">Standings</a>
+                        <a href="standings.html"><strong>Standings</strong></a>
                     </li>
                     <li>
-                        <a href="locations.html">Locations</a>
+                        <a href="locations.html"><strong>Locations</strong></a>
                     </li>
                     <li>
-                        <a href="signup.html">Sign Up</a>
+                        <a href="signup.html"><strong>Sign Up</strong></a>
                     </li>
                 </ul>
             </div>
@@ -104,19 +104,19 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">The
+                    <h2 class="text-center"><small>The
                         <strong>Training Locations</strong>
-                    </h2>
+                    </small></h2>
                     <hr>
                 </div>
                 <div class="clearfix"></div>
                 <ul id="center" class="list-group">
-<!--            https://maps.googleapis.com/maps/api/staticmap?center=Mont-Tremblant,+QC/@46.1757589,-74.5923296&zoom=13&size=512x341&scale=2&maptype=terrain&language=french-->
-                <li class="list-group-item col-sm-4 text-center"><img class="img-responsive" src="https://maps.googleapis.com/maps/api/staticmap?center=Mont-Tremblant,+QC&zoom=10&size=512x341&scale=2&maptype=hybrid&language=french&markers=color:0xacadab|46.1197588,-74.6133296" alt="Mont Tremblant, QC, Canada" /><h5></h5></li>
-                <li class="list-group-item col-sm-4 text-center"><img class="img-responsive" src="https://maps.googleapis.com/maps/api/staticmap?center=Carling+Ave,+Ottawa,+ON+K1S+2E1&zoom=14&size=400x250&maptype=roadmap
-&markers=color:green" alt="Whiteface Mountain, NY, USA" /><h5></h5></li>
-                <li class="list-group-item col-sm-4 text-center"><img class="img-responsive" src="https://maps.googleapis.com/maps/api/staticmap?center=Carling+Ave,+Ottawa,+ON+K1S+2E1&zoom=14&size=400x250&maptype=roadmap
-&markers=color:green" alt="Alps, Switzerland" /><h5></h5></li>
+                <li class="list-group-item col-sm-4 text-center"><img class="img-responsive" src="https://maps.googleapis.com/maps/api/staticmap?center=Mont-Tremblant,+QC&zoom=10&size=512x341&scale=2&maptype=terrain&language=french&markers=color:0x657755|46.1197588,-74.6133296" alt="Mont Tremblant, QC, Canada" /><h2><small>Mont Tremblant</small></h2><p><small>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</small></p></li>
+                <li class="list-group-item col-sm-4 text-center"><img class="img-responsive" src="https://maps.googleapis.com/maps/api/staticmap?center=Mont-Tremblant,+QC&zoom=10&size=512x341&scale=2&maptype=terrain&language=french&markers=color:0x657755|46.1197588,-74.6133296" alt="Mont Tremblant, QC, Canada" /><h2><small>Mont Tremblant</small></h2><p><small>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</small></p></li>
+                <li class="list-group-item col-sm-4 text-center"><img class="img-responsive" src="https://maps.googleapis.com/maps/api/staticmap?center=Mont-Tremblant,+QC&zoom=10&size=512x341&scale=2&maptype=terrain&language=french&markers=color:0x657755|46.1197588,-74.6133296" alt="Mont Tremblant, QC, Canada" /><h2><small>Mont Tremblant</small></h2><p><small>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</small></p></li>
+                <li class="list-group-item col-sm-4 text-center"><img class="img-responsive" src="https://maps.googleapis.com/maps/api/staticmap?center=Mont-Tremblant,+QC&zoom=10&size=512x341&scale=2&maptype=terrain&language=french&markers=color:0x657755|46.1197588,-74.6133296" alt="Mont Tremblant, QC, Canada" /><h2><small>Mont Tremblant</small></h2><p><small>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</small></p></li>
+                <li class="list-group-item col-sm-4 text-center"><img class="img-responsive" src="https://maps.googleapis.com/maps/api/staticmap?center=Mont-Tremblant,+QC&zoom=10&size=512x341&scale=2&maptype=terrain&language=french&markers=color:0x657755|46.1197588,-74.6133296" alt="Mont Tremblant, QC, Canada" /><h2><small>Mont Tremblant</small></h2><p><small>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</small></p></li>
+                <li class="list-group-item col-sm-4 text-center"><img class="img-responsive" src="https://maps.googleapis.com/maps/api/staticmap?center=Mont-Tremblant,+QC&zoom=10&size=512x341&scale=2&maptype=terrain&language=french&markers=color:0x657755|46.1197588,-74.6133296" alt="Mont Tremblant, QC, Canada" /><h2><small>Mont Tremblant</small></h2><p><small>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</small></p></li>
                 </ul>
                 <div class="clearfix"></div>
             </div>
