--- a/pages/signup.html
+++ b/pages/signup.html
@@ -47,16 +47,16 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav text-uppercase">
                     <li>
-                        <a href="../index.html">Home</a>
+                        <a href="../index.html"><strong>Home</strong></a>
                     </li>
                     <li>
-                        <a href="standings.html">Standings</a>
+                        <a href="standings.html"><strong>Standings</strong></a>
                     </li>
                     <li>
-                        <a href="locations.html">Locations</a>
+                        <a href="locations.html"><strong>Locations</strong></a>
                     </li>
                     <li>
-                        <a href="signup.html">Sign Up</a>
+                        <a href="signup.html"><strong>Sign Up</strong></a>
                     </li>
                 </ul>
             </div>
@@ -80,13 +80,13 @@
                     <div class="row text-center">
                         <div class="col-sm-4 col-md-4 col-lg-4">
                             <h2><small>Plan A</small></h2>
-                            <h3>Golden Decade</h3>
+                            <h3>Active Following</h3>
                             <h2><small>CAD 29,999.99</small></h2>
                             <hr>
                         </div>
                         <div class="col-sm-4 col-md-4 col-lg-4">
                             <h2><small>Plan B</small></h2>
-                            <h3>30-Year Long Adventure</h3>
+                            <h3>Prime Adventure</h3>
                             <h2><small>CAD 49,999.99</small></h2>
                             <hr>
                         </div>
@@ -183,8 +183,8 @@
                                 <label>Please select one of the option plans below:</label>
                                 <select class="form-control" name="option" id="option">
                                     <option>Choose from the 3 available plans</option>
-                                    <option value="01">Plan A: Golden Decade</option>
-                                    <option value="02">Plan B: 30 Year Long Adventure</option>
+                                    <option value="01">Plan A: Active Following</option>
+                                    <option value="02">Plan B: Prime Adventure</option>
                                     <option value="03">Plan C: Lifetime Valour</option>
                                 </select>
                             </div>
