--- a/pages/standings.html
+++ b/pages/standings.html
@@ -47,16 +47,16 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav text-uppercase">
                     <li>
-                        <a href="../index.html">Home</a>
+                        <a href="../index.html"><strong>Home</strong></a>
                     </li>
                     <li>
-                        <a href="standings.html">Standings</a>
+                        <a href="standings.html"><strong>Standings</strong></a>
                     </li>
                     <li>
-                        <a href="locations.html">Locations</a>
+                        <a href="locations.html"><strong>Locations</strong></a>
                     </li>
                     <li>
-                        <a href="signup.html">Sign Up</a>
+                        <a href="signup.html"><strong>Sign Up</strong></a>
                     </li>
                 </ul>
             </div>
