--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav text-uppercase">
                     <li>
-                        <a href="index.html"><strong>Home</strong></a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="pages/standings.html"><strong>Standings</strong></a>
+                        <a href="pages/standings.html">Standings</a>
                     </li>
                     <li>
-                        <a href="pages/locations.html"><strong>Locations</strong></a>
+                        <a href="pages/locations.html">Locations</a>
                     </li>
                     <li>
-                        <a href="pages/signup.html"><strong>Sign Up</strong></a>
+                        <a href="pages/signup.html">Sign Up</a>
                     </li>
                 </ul>
             </div>
