--- a/pages/locations.html
+++ b/pages/locations.html
@@ -47,16 +47,16 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav text-uppercase">
                     <li>
-                        <a href="../index.html"><strong>Home</strong></a>
+                        <a href="../index.html">Home</a>
                     </li>
                     <li>
-                        <a href="standings.html"><strong>Standings</strong></a>
+                        <a href="standings.html">Standings</a>
                     </li>
                     <li>
-                        <a href="locations.html"><strong>Locations</strong></a>
+                        <a href="locations.html">Locations</a>
                     </li>
                     <li>
-                        <a href="signup.html"><strong>Sign Up</strong></a>
+                        <a href="signup.html">Sign Up</a>
                     </li>
                 </ul>
             </div>
@@ -104,9 +104,9 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="text-center"><small>The
+                    <h2 class="intro-text text-center">The
                         <strong>Training Locations</strong>
-                    </small></h2>
+                    </h2>
                     <hr>
                 </div>
                 <div class="clearfix"></div>
