--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Competition Year
+                    <h2 class="headline text-center">Competition Year
                         <strong>77</strong>
                     </h2>
                     <hr>
@@ -221,7 +221,7 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Competition Year
+                    <h2 class="headline text-center">Competition Year
                         <strong>77</strong>
                     </h2>
                     <hr>
