--- a/pages/locations.html
+++ b/pages/locations.html
@@ -70,7 +70,7 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">The
+                    <h2 class="headline text-center">The
                         <strong>Primary Hub</strong>
                     </h2>
                     <hr>
@@ -104,7 +104,7 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">The
+                    <h2 class="headline text-center">The
                         <strong>Training Locations</strong>
                     </h2>
                     <hr>
