--- a/pages/signup.html
+++ b/pages/signup.html
@@ -72,7 +72,7 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">
+                    <h2 class="headline text-center">
                         Choose between <strong>the available options</strong>
                     </h2>
                     <hr>
@@ -98,7 +98,7 @@
                         </div>
                     </div>
                     <hr>
-                    <h2 class="intro-text text-center">
+                    <h2 class="headline text-center">
                         <strong>Join the league now</strong>
                     </h2>
                     <form role="form">
