--- a/pages/standings.html
+++ b/pages/standings.html
@@ -69,7 +69,7 @@
         <div class="row">
             <div class="box text-center">
                 <hr>
-                <h2 class="intro-text">
+                <h2 class="headline">
                     <strong>Local Races</strong>
                 </h2>
                 <hr>
@@ -271,7 +271,7 @@
                 </table>
                 
                 <hr>
-                    <h2 class="intro-text">
+                    <h2 class="headline">
                         <strong>Domestic Competitions</strong>
                     </h2>
                 <hr>
@@ -473,7 +473,7 @@
                     </tbody>
                 </table>
                 <hr>
-                <h2 class="intro-text">
+                <h2 class="headline">
                     <strong>International Championships</strong>
                 </h2>
                 <hr>
@@ -674,7 +674,7 @@
                 </table>
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text">History of
+                    <h2 class="headline">History of
                         <strong>The Cableway Racing League</strong>
                     </h2>
                     <hr>
@@ -716,10 +716,10 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Our
+                    <h2 class="headline text-center">Our
                         <strong>Core Team</strong>
                     </h2>
-                    <h2 class="intro-text text-center">The ones that started it all!</h2>
+                    <h2 class="headline text-center">The ones that started it all!</h2>
                     <hr>
                 </div>
                 <div class="col-sm-4 text-center">
