--- a/pages/signup.html
+++ b/pages/signup.html
@@ -110,11 +110,11 @@
                             </div>
                             <div class="form-group col-sm-4 col-md-4 col-lg-4">
                                 <label>Address</label>
-                                <input type="email" class="form-control" placeholder="enter your current address">
+                                <input type="text" class="form-control" placeholder="enter your current address">
                             </div>
                             <div class="form-group col-sm-4 col-md-4 col-lg-4">
                                 <label>City</label>
-                                <input type="tel" class="form-control" placeholder="enter the name of your city">
+                                <input type="text" class="form-control" placeholder="enter the name of your city">
                             </div>
                         </div>
                         <div class="row">
@@ -139,7 +139,7 @@
                             </div>
                             <div class="form-group col-sm-3 col-md-3 col-lg-2">
                                 <label>Postal Code</label>
-                                <input type="email" class="form-control" placeholder="enter postal code">
+                                <input type="text" class="form-control" placeholder="enter postal code">
                             </div>
                             <div class="form-group col-sm-3 col-md-3 col-lg-4">
                                 <label>Phone Number</label>
@@ -157,7 +157,7 @@
                             </div>
                             <div class="form-group col-sm-6 col-md-3 col-lg-2">
                                 <label>Credit Card Number</label>
-                                <input type="email" class="form-control" placeholder="XXXXXXXXXXXXXXXX">
+                                <input type="number" class="form-control" placeholder="XXXXXXXXXXXXXXXX">
                             </div>
                             <div class="form-group col-sm-4 col-md-2 col-lg-2">
                                 <label>Card Type</label>
@@ -170,11 +170,11 @@
                             </div>
                             <div class="form-group col-sm-4 col-md-2 col-lg-2">
                                 <label>CVV</label>
-                                <input type="tel" class="form-control" placeholder="security code">
+                                <input type="number" class="form-control" placeholder="security code">
                             </div>
                             <div class="form-group col-sm-4 col-md-2 col-lg-2">
                                 <label>Expiration Date</label>
-                                <input type="tel" class="form-control" placeholder="MM-YY">
+                                <input type="date" class="form-control" placeholder="MM-YY">
                             </div>
                         </div>
                         <hr class="hidden-xs">
