--- a/pages/signup.html
+++ b/pages/signup.html
@@ -174,7 +174,7 @@
                             </div>
                             <div class="form-group col-sm-4 col-md-2 col-lg-2">
                                 <label>Expiration Date</label>
-                                <input type="date" class="form-control" placeholder="MM-YY">
+                                <input type="text" class="form-control" placeholder="MM-YY">
                             </div>
                         </div>
                         <hr class="hidden-xs">
